// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextfieldBase /> should not show error color when not have any error message 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-root-17 makeStyles-root-21"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root makeStyles-cssLabel-15 makeStyles-cssLabel-19 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
    >
      Test
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-fontColor-16 makeStyles-fontColor-20 MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input"
        type="text"
        value="Value"
      />
    </div>
  </div>
</div>
`;

exports[`<TextfieldBase /> should show error color when errorMessage is available 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-root-10 makeStyles-root-14"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root makeStyles-cssLabel-8 makeStyles-cssLabel-12 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-error Mui-error MuiFormLabel-filled"
      data-shrink="true"
    >
      Test
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-fontColor-9 makeStyles-fontColor-13 Mui-error Mui-error MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="true"
        class="MuiInputBase-input MuiInput-input"
        type="text"
        value="Value"
      />
    </div>
    <p
      class="MuiFormHelperText-root Mui-error MuiFormHelperText-filled"
    >
      error message
    </p>
  </div>
</div>
`;
